<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.palaver.Login"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/ConstraintLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="UselessLeaf">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/EditText_NikName"
                style="@style/EditText"
                android:hint="@string/edittext_nikname"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="TextFields" />
            <EditText
                android:id="@+id/EditText_Password"
                style="@style/EditText"
                android:hint="@string/edittext_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TextFields">
            </EditText>
            <EditText
                android:id="@+id/EditText_Password_Confirm"
                style="@style/EditText"
                android:hint="@string/edittext_password_confirm"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TextFields">
            </EditText>
            <Button
                android:id="@+id/Button_Register"
                style="@style/LogIn_Register"
                android:text="@string/button_register"
                android:backgroundTint="@color/colorPrimaryDark"
                tools:ignore="UnusedAttribute">
            </Button>
            <TextView
                android:id="@+id/TextView_LogIn"
                style="@style/LogIn_Register"
                android:layout_marginTop="10dp"
                android:text="@string/textview_login">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>