<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/ConstraintLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="UselessLeaf">
            <TextView
                android:id="@+id/TextView_Alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <EditText
                android:id="@+id/EditText_New_Password"
                style="@style/EditText"
                android:hint="@string/edittext_new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TextFields">
            </EditText>
            <EditText
                android:id="@+id/EditText_New_Password_Confirm"
                style="@style/EditText"
                android:hint="@string/edittext_new_password_confirm"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TextFields">
            </EditText>
            <EditText
                android:id="@+id/EditText_Old_Password"
                style="@style/EditText"
                android:hint="@string/edittext_old_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TextFields">
            </EditText>
            <Button
                android:id="@+id/Button_Change_Password"
                style="@style/LogIn_Register"
                android:text="@string/button_change_password"
                android:backgroundTint="@color/colorPrimaryDark"
                tools:ignore="UnusedAttribute">
            </Button>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>